--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,13 @@
 <p>
   home works!
 </p>
+
+
+<!-- <button (click)="firstClick()">Click me!!!</button> -->
+
+<ul *ngIf='users'>
+  <li *ngFor='let user of users.data'>
+    <img [src]="user.avatar">
+    <p>{{user.first_name}} {{user.last_name}}</p>
+  </li>
+</ul>
