--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,6 +13,9 @@
     <li>
       <a routerLink="/contacts">Our contacts</a>
     </li>
+    <li>
+      <a routerLink="/cv-page">CV</a>
+    </li>
   </ul>
 </nav>
 
