--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,35 +5,61 @@ $color-third: #5AB9EA;
 $color-fourth: #C1C8E4;
 $color-fifth: #8860D0;
 
-body, html{
-    background-color: $color-fourth;
-    height:100%;
-    margin:0 auto;
+body,
+html {
+  background-color: $color-fourth;
+  height: 100%;
+  margin: 0 auto;
 }
 
-body{
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 1.125em;
+body {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1.125em;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
-.container{
-    width:80%;
-    margin:0 auto;
-    padding: 1.3em;
-    display: grid;
-    grid-template-columns: 30% auto;
+.container {
+  width: 80%;
+  margin: 0 auto;
+  padding: 1.3em;
+  display: grid;
+  grid-template-columns: 30% auto;
 
-    a{
-        color: white
+  a {
+    color: white
+  }
+}
+
+section {
+  width: 80%;
+  margin: 0 auto;
+  padding: 2em;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  border: 1px solid black;
+  width: 70%;
+  margin: auto;
+
+  tr {
+    width: 100%;
+
+    td,
+    th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+
+      tr:nth-child(even) {
+        background-color: #dddddd;
+      }
     }
-}
+  }
 
-section{
-    width:80%;
-    margin:0 auto;
-    padding: 2em;
+
 }
